--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>Pixelate</title>
     <!-- This gets us our fun 8-bit font from Google Fonts -->
@@ -8,16 +9,27 @@
     <!-- loads our own CSS file -->
     <link rel="stylesheet" href="/style.css" />
   </head>
+
   <body>
+
     <h1>Pixelate</h1>
+
     <div>
-      <button id='add-row'>Add a row</button>
+      <button id='addRow'>Add a row</button>
       <select>
         <!-- add options here! -->
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+        <option value="green">Green</option>
+        <option value="orange">Orange</option>
       </select>
     </div>
-    <table></table>
+
+    <table>
+    </table>
+
   </body>
   <!-- loads our JavaScript file -->
   <script type="text/javascript" src="/script.js"></script>
+
 </html>
