--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
       <select>
         <!-- add options here! -->
         <option value="red">Red</option>
-        <option value="blue">Blue</option>
-        <option value="green">Green</option>
         <option value="orange">Orange</option>
+        <option value="yellow">Yellow</option>
+        <option value="green">Green</option>
+        <option value="blue">Blue</option>
+        <option value="indigo">Indigo</option>
+        <option value="violet">Violet</option>
+        <option value="black">Black</option>
+        <option value="white">White</option>
+        
+        
       </select>
     </div>
 
